# openclaw-gmail-proxy

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  policy.yaml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  docker.yml
docs/: ci-security.md
openclaw-plugin/: INTEGRATION.md  SKILL.md  mcp-registration.json
scripts/: oauth_bootstrap.py
src/gmail_proxy/: __init__.py  audit.py  auth.py  cache.py  categories.py  config.py  context.py  errors.py  killswitch.py  main.py  mcp_server.py  models.py  output.py  tools.py
src/gmail_proxy/admin/: __init__.py  app.py  google_auth.py
src/gmail_proxy/admin/static/: style.css
src/gmail_proxy/admin/templates/: audit.html  base.html  cache.html  config.html  credentials.html  dashboard.html  explain.html  login.html  playground.html  setup.html
src/gmail_proxy/gmail/: __init__.py  client.py  google_client.py  mock_client.py  oauth.py  token_store.py
src/gmail_proxy/policy/: __init__.py  engine.py  mutation.py  query.py
tests/: conftest.py  test_admin.py  test_admin_google.py  test_admin_token.py  test_audit.py  test_auth.py  test_blocklist.py  test_cache.py  test_eligibility.py  test_labels.py  test_mcp_host.py  test_mcp_live.py  test_mutation.py  test_output.py  test_query.py  test_setup.py  test_tools.py
tests/e2e/: test_admin_ui_e2e.py
