[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-gmail-proxy"
version = "0.1.0"
description = "Category-scoped Gmail proxy + OpenClaw plugin"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2",
    "pydantic-settings",
    "pyyaml",
    "mcp",
    "jinja2",
    "python-multipart",
    "httpx",
    "cryptography",
    "bleach",
    "lxml",
    "google-api-python-client",
    "google-auth",
    "google-auth-oauthlib",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "pytest-playwright"]

[project.scripts]
gmail-proxy = "gmail_proxy.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E741 (ambiguous name `l`) and E702 (semicolons) are fine in this codebase.
ignore = ["E741", "E702"]
